@@ -8,6 +8,9 @@ Under development
 Features added
 --------------
 
+* New function ``etree.cleanup_namespaces(el)`` that removes unused
+  namespace declarations from a (sub)tree (experimental).
+
 * XSLT results support the buffer protocol in Python 3.
 
 * Polymorphic functions in ``lxml.html`` that accept either a tree or
@@ -18,7 +21,7 @@ Features added
 * Support for Python 2.6 and 3.0 (experimental!).
 
 * File name handling now uses a heuristic to convert between byte
-  strings and unicode strings.
+  strings (usually filenames) and unicode strings (usually URLs).
 
 * Parsing from a plain file object frees the GIL under Python 2.x.
 
